services/hello-world/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: hello-world
  labels:
    app: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: klutzer/hello-world:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
            cpu: "128m"
          requests:
            memory: 64Mi
            cpu: "80m"
